--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  border: 1px solid red;
 }
 
 body {
@@ -12,11 +11,12 @@ body {
 
 h1 {
   text-align: center;
-  color: #9A9DAB;
+  color: #ffffff;
+  height: 80px;
+  padding-top: 10px;
 }
 
 .main {
-  /* width: 100%; */
   display: flex;
   flex-direction: row;
   height: 1500px;
@@ -30,14 +30,13 @@ h1 {
 }
 
 .body-sidebar-sidebarContainer {
-  /* width: 100%; */
   background-color: #9A9DAB;
   border: 1px solid black;
-  /* height: 1500px; */
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  overflow: scroll;
 }
 
 .sidebar-header-name {
@@ -49,6 +48,7 @@ h1 {
   font-weight: bold;
   font-size: 1.2em;
   margin: .5em .5em .5em .5em;
+  width: inherit;
 }
 
 .sidebar-header-line {
@@ -64,9 +64,10 @@ h1 {
   border-color: black;
   border-style: solid;
   border-width: 1px;
-  height: 15%;
-  width: 80%;
-  margin: 2px;
+  height: 200px;
+  width: 200px;
+  margin: 4px 2px 2px 2px;
+  justify-content: center;
 }
 
 .sidebar-body-friendContainer {
@@ -81,12 +82,7 @@ h1 {
 .body-main-infoContainter {
   width: 100%;
   border: 1px solid black;
-  /* height: 1500px; */
-  /* display: inline-block; */
   margin: 0 0 1em;
-  /* flex-wrap: wrap; */
-  /* column-count: 3;
-  column-gap: 1em; */
   display: flex;
   flex-direction: column;
   overflow: scroll;
@@ -95,52 +91,46 @@ h1 {
 .main-column-hydration {
   display: flex;
   flex-direction: row;
-  /* overflow: scroll; */
   height: 25%
 }
 
 .main-column-activity {
   display: flex;
   flex-direction: row;
-  /* overflow: scroll; */
   height: 50%
 }
 
 .main-column-sleep {
   display: flex;
   flex-direction: row;
-  /* overflow: scroll; */
   height: 35%
 }
 
 .infoContainer-cardContainer-card-horizontal {
   width: 100%;
-  /* height: 100%; */
   background-color: white;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 3%;
-  /* padding: 3%; */
+  margin: 1%;
+  justify-content: space-between;
 }
 
 .horizontalCard-activity-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 100%;
 }
 
 .infoContainer-cardContainer-card-vertical {
   width: 100%;
-  /* height: 100%; */
   background-color: white;
   border: 1px solid black;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  margin: 3%;
-  /* padding: 3%; */
+  margin: 1%;
 }
 
 .card-today-hydration {
@@ -155,7 +145,8 @@ h1 {
   justify-content: space-between;
   width: 80%;
 }
-.card-today-sleep{
+
+.card-today-sleep {
   text-align: center;
   background-color: #EC96A4;
   height: auto;
@@ -168,7 +159,7 @@ h1 {
   width: 80%;
 }
 
-.card-today-activity{
+.card-today-activity {
   text-align: center;
   background-color: #DFE166;
   height: auto;
@@ -184,39 +175,36 @@ h1 {
 .card-history-hydration {
   text-align: center;
   background-color: #5BC8AC;
-  /* height: auto; */
   font-size: 1em;
   margin: .5em;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 50%;
 }
 
 .card-history-sleep {
   text-align: center;
   background-color: #EC96A4;
-  /* height: inherit; */
   font-size: 1em;
   margin: .5em;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 50%;
 }
 
 .card-history-activity {
   text-align: center;
   background-color: #DFE166;
-  /* height: auto; */
   font-size: 1em;
   margin: .5em;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 50%;
 }
 
@@ -233,7 +221,6 @@ h1 {
   font-weight: bolder;
   margin: .5em;
   color: black;
-
 }
 
 .thisWeek {
@@ -242,7 +229,6 @@ h1 {
   font-weight: bolder;
   margin: .5em;
   color: black;
-
 }
 
 .card-vertical-list {
@@ -254,5 +240,7 @@ h1 {
 }
 
 .historical-list-listItem {
-  padding: .2em;
+  padding: .3em;
+  font-weight: bold;
+  font-family: sans-serif;
 }
