--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,7 @@ h1 {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  overflow: scroll;
 }
 
 .infoContainer-cardContainer-card-vertical {
@@ -131,6 +132,7 @@ h1 {
   display: flex;
   flex-direction: row;
   margin: 1%;
+  overflow: scroll;
 }
 
 .card-today-hydration {
@@ -206,6 +208,8 @@ h1 {
   flex-direction: column;
   justify-content: flex-start;
   width: 50%;
+  height: 93%;
+  overflow: scroll;
 }
 
 .number {
